Notify accessibility of origin string when PWA window opened

The origin string is displayed in the title bar when PWA windows
are opened as a security precaution. This CL ensures it is also
spoken by ChromeVox for accessibility.

Bug: 839177
Change-Id: I622c45517ecddd2d85f680ae0fcae225e5be3ed9
Reviewed-on: https://chromium-review.googlesource.com/1068891
Commit-Queue: Alan Cutter <alancutter@chromium.org>
Reviewed-by: James Cook <jamescook@chromium.org>
Cr-Commit-Position: refs/heads/master@{#560902}